--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,23 +3,8 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-- task: InvokeRESTAPI@1
-  inputs:
-    connectionType: 'connectedServiceName'
-    method: 'GET'
-    headers: |
-      {
-      "Content-Type":"application/json", 
-      "PlanUrl": "$(system.CollectionUri)", 
-      "ProjectId": "$(system.TeamProjectId)", 
-      "HubName": "$(system.HostType)", 
-      "PlanId": "$(system.PlanId)", 
-      "JobId": "$(system.JobId)", 
-      "TimelineId": "$(system.TimelineId)", 
-      "TaskInstanceId": "$(system.TaskInstanceId)", 
-      "AuthToken": "$(system.AccessToken)"
-      }
-      
-      curl -X POST \
-      https://testing.sweagle.com/api/v1/tenant/metadata-parser/parse -H "Authorization: bearer f799d9d3-4624-40dc-85ea-10ec16100d16" -d "mds=release1.0&parser=all&args=&mdsArgs=&format=JSON&tag=&mdsTags="
-    waitForCompletion: 'false'
+  trigger:
+  - master
+
+  pool:
+    vmImage: 'Ubuntu-16.04'
