--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,12 @@
   pool:
     vmImage: 'Ubuntu-16.04'
 
-  stages:
-    - stage: Build
-        job:1
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
 
-    - stage: Test
-        job:2
-    - stage: Deploy
-        job:3
+      cd /Users/boondock/Documents/Technical
+    curl -X POST \
+    https://testing.sweagle.com/api/v1/tenant/metadata-parser/parse -H "Authorization: bearer 783d4f5b-c260-4cce-936e-00d2483875ab" -d "mds=release1.0&parser=all&args=&mdsArgs=&format=JSON&tag=V.2.1.3&mdsTags="
