Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,4 @@
       # Write your PowerShell commands here.
 
       cd /Users/boondock/Documents/Technical
-      print **done**
+      echo 'test'
