Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,10 @@
   pool:
     vmImage: 'Ubuntu-16.04'
 
-stages:
-- stage: Test
-- task: CmdLine@2
+  stages:
+   stage: Test
+
+  task: CmdLine@2
   inputs:
     script: |
       echo Write your commands here
@@ -19,13 +20,13 @@ stages:
       echo Hello world
     workingDirectory: '/Users/boondock/Documents/Technical'
 
-- stage: DeployUS1
+  stage: DeployUS1
   dependsOn: Test    # this stage runs after Test
 
-- stage: DeployUS2
+  stage: DeployUS2
   dependsOn: Test    # this stage runs in parallel with DeployUS1, after Test
 
-- stage: DeployEurope
+  stage: DeployEurope
   dependsOn:         # this stage runs after DeployUS1 and DeployUS2
   - DeployUS1
   - DeployUS2
